<resources>
    <string name="welcome">Welcome to Poshan Abhiyaan</string>
    <string name="app_name">E-Anganwadi</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">MPIN</string>
    <string name="about">About Us</string>
    <string name="history">History</string>
    <string name="aboutus">Poshan Abhiyaan was launched by Honble Prime Minister on 8th March, 2018 in Jhunjhunu district of Rajasthan. The focus of Abhiyaan is to lay emphasis on nutritional status of adolescent girls, pregnant women, lactating mothers and children from 0-6 years age.</string>
    <string name="login">Login</string>
    <string name="donate">Donate</string>
    <string name="message">Message</string>
    <string name="create_new">Don\'t have Account! Click here to Register</string>
    <string name="not_register">Already Registered?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register Your Account</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a MPIN</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>

    <string name="donor_name">Donor Name</string>
    <string name="food_name">Food Items</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>

    <string name="foodmap">Food Map</string>
    <string name="mypin">My Pins</string>

    <string name="receiver_name">Receiver Name</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Mobile_No">Mobile No</string>
    <string name="ReEnter">Re Enter MPIN</string>
    <string name="mpin">Set MPIN</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="delete">Delete</string>
    <string name="phone">Mobile Number</string>
    <string name="issue">Issue</string>
    <string name="subject">Subject</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string-array name="Vaccination">
        <item>vaccin 1</item>
        <item>vaccin 2</item>
        <item>vaccin 3</item>
        <item>vaccin 4</item>
    </string-array>
</resources>

