<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6BBBB"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/opensans"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/opensans"
                android:hint="@string/prompt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/opensans"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/opensans"
                android:hint="@string/prompt_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@color/red"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/opensans"
            android:gravity="center"
            android:text="\nAlready have an account? Login\n"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </LinearLayout>
</LinearLayout>

